--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mdx-bundler": "^10.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "rehype-prism-plus": "^2.0.1",
     "rehype-slug": "^6.0.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
