--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/web": "^10.0.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "node-cache": "^5.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
