--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/remark-prism": "^1.3.7",
     "mdx-bundler": "^10.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
