--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "rehype-prism-plus": "^2.0.1",
     "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
