--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
+    "tsx": "^4.19.4",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
